// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreDisplay Snapshots renders correctly with non-zero score 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0f172a",
      "borderColor": "#1e293b",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minWidth": 240,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
  testID="score-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 10,
          "fontWeight": "900",
          "letterSpacing": 1.5,
          "marginBottom": 2,
          "textTransform": "uppercase",
        }
      }
    >
      SCORE
    </Text>
    <Text
      style={
        {
          "color": "#f8fafc",
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      testID="current-score"
    >
      1250
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#1e293b",
        "height": "60%",
        "marginHorizontal": 5,
        "width": 1,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 10,
          "fontWeight": "900",
          "letterSpacing": 1.5,
          "marginBottom": 2,
          "textTransform": "uppercase",
        }
      }
    >
      BEST
    </Text>
    <Text
      style={
        {
          "color": "#10b981",
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      testID="high-score"
    >
      5000
    </Text>
  </View>
</View>
`;

exports[`ScoreDisplay Snapshots renders correctly with zero score 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0f172a",
      "borderColor": "#1e293b",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minWidth": 240,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
  testID="score-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 10,
          "fontWeight": "900",
          "letterSpacing": 1.5,
          "marginBottom": 2,
          "textTransform": "uppercase",
        }
      }
    >
      SCORE
    </Text>
    <Text
      style={
        {
          "color": "#f8fafc",
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      testID="current-score"
    >
      0
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#1e293b",
        "height": "60%",
        "marginHorizontal": 5,
        "width": 1,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 10,
          "fontWeight": "900",
          "letterSpacing": 1.5,
          "marginBottom": 2,
          "textTransform": "uppercase",
        }
      }
    >
      BEST
    </Text>
    <Text
      style={
        {
          "color": "#10b981",
          "fontSize": 28,
          "fontWeight": "bold",
        }
      }
      testID="high-score"
    >
      0
    </Text>
  </View>
</View>
`;
